Move creation of workload resources from the AsbtarctModel clas
Signed-off-by: Jakub Scholz <www@scholzj.com>